--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ByteSwap"
         tools:targetApi="31">
+
+        <!-- MainActivity declaration -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,6 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Settings activity declaration -->
+        <activity
+            android:name=".Settings"
+            android:exported="false" />
+
     </application>
 
 </manifest>
