--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".Settings"
             android:exported="false" />
+        <activity
+            android:name=".AboutUs"
+            android:exported="false" />
 
     </application>
 
