Funny Debug Menu Created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity
             android:name=".AboutUs"
             android:exported="false" />
+        <activity android:name=".debug_funny" android:exported="false"/>
 
     </application>
 
