So Much and I mean So Much created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:name=".AboutUs"
             android:exported="false" />
         <activity android:name=".debug_funny" android:exported="false"/>
+        <activity android:name=".Account" android:exported="false"/>
 
     </application>
 
